Fix painting with colorsmudge brushes on transparency masks

We should create a correct composition source device. The precise copy
of the device cannot create it correctly, we should do that manually.

BUG:391268
(cherry picked from commit 7598fff3f4c9e5058f17b3ff5252782ce0c9fdd2)